--- a/HubTechSolutionsJava/src/main/webapp/index.html
+++ b/HubTechSolutionsJava/src/main/webapp/index.html
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://www.startpage.com/av/proxy-image?piurl=https%3A%2F%2Fthearchitecturedesigns.com%2Fwp-content%2Fuploads%2F2019%2F12%2F9-Corinthia-Hotel-London.jpg&sp=1711651238Tdb5e3dc058b0dfb703038d50ceafb0694b80494e2d6a755c59724c528a6cd00d" alt="..." /></div>
                     </div>
                 </div>
             </header>
