--- a/HubTechSolutionsJava/src/main/webapp/contact2.html
+++ b/HubTechSolutionsJava/src/main/webapp/contact2.html
@@ -88,20 +88,17 @@
                                         <label for="name">Password</label>
                                         <div class="invalid-feedback" data-sb-feedback="name:required">A password is required.</div>
                                     </div>
+                                    <!-- DOB input-->
+                                    <div class="form-floating mb-3">
+                                        <input class="form-control" type="date" id="dob" name="dob" data-sb-validations="required" />
+                                        <label for="phone">Date of Birth</label>
+                                        
+                                    </div>
                                     <!-- Phone number input-->
                                     <div class="form-floating mb-3">
                                         <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
                                         <label for="phone">Phone number</label>
                                         <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                                    </div>
-                                    <!-- Message input-->
-                                    <div class="form-floating mb-3">
-                                        <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                        <label for="message">Message</label>
-                                        <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-                                    </div>
-                                    <div class="form-floating mb-3">
-                                        <p id="loginPrompt" type="text"> Already have an account? <a href="login.html">Sign In Here </a></p>
                                     </div>
                                     <!-- Submit success message-->
                                     <!---->
