--- a/HubTechSolutionsJava/src/main/webapp/contact2.html
+++ b/HubTechSolutionsJava/src/main/webapp/contact2.html
@@ -72,9 +72,9 @@
                                         <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" id="name" type="text" placeholder="Select your Username" data-sb-validations="required" />
+                                        <input class="form-control" id="username" type="text" placeholder="Select your Username" data-sb-validations="required" />
                                         <label for="name">Username</label>
-                                        <div class="invalid-feedback" data-sb-feedback="name:required">A username is required.</div>
+                                        <div class="invalid-feedback" data-sb-feedback="username:required">A username is required.</div>
                                     </div>
                                     <!-- Email address input-->
                                     <div class="form-floating mb-3">
@@ -84,22 +84,29 @@
                                         <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                                     </div>
                                     <div class="form-floating mb-3">
-                                        <input class="form-control" id="name" type="text" placeholder="Select your Password" data-sb-validations="required" />
+                                        <input class="form-control" id="password" type="text" placeholder="Select your Password" data-sb-validations="required" />
                                         <label for="name">Password</label>
-                                        <div class="invalid-feedback" data-sb-feedback="name:required">A password is required.</div>
+                                        <div class="invalid-feedback" data-sb-feedback="password:required">A password is required.</div>
                                     </div>
                                     <!-- DOB input-->
                                     <div class="form-floating mb-3">
                                         <input class="form-control" type="date" id="dob" name="dob" data-sb-validations="required" />
                                         <label for="phone">Date of Birth</label>
-                                        
+                                    </div>
+                                    <div class="form-floating mb-3">
+                                        <input class="form-control" id="address" type="text" placeholder="Type your Address" data-sb-validations="required" />
+                                        <label for="name">Address</label>
+                                        <div class="invalid-feedback" data-sb-feedback="Address:required">An address is required.</div>
                                     </div>
                                     <!-- Phone number input-->
                                     <div class="form-floating mb-3">
                                         <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
                                         <label for="phone">Phone number</label>
                                         <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-                                    </div>
+                                    
+                                    <div class="form-floating mb-3">
+                                    <p>Already Have an Account? <a href="login.html">Login Here</a></p>
+                                    <p><a href="admin.html">Admin Login</a></p>
                                     <!-- Submit success message-->
                                     <!---->
                                     <!-- This is what your users will see when the form-->
