--- a/HubTechSolutionsJava/src/main/webapp/login.html
+++ b/HubTechSolutionsJava/src/main/webapp/login.html
@@ -5,28 +5,68 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            font-size: 16px;
+            color: #000;
+            background-color: #f8f8f8;
+        }
+        * {
+            font-family: Arial, sans-serif;
+            box-sizing: border-box;
+        }
+
+        .form {
+            max-width: 320px;
+            padding: 15px;
+            margin: 150px auto;
+            background-color: #fff;
+        }
+
+        .input {
+            display: block;
+            width: 100%;
+            padding: 8px 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+        }
+
+        label {
+            display: inline-block;
+            padding: 8px 10px;
+        }
+        .btn {
+            display: block;
+            width: 100%;
+            padding: 8px 10px;
+            border: 0;
+            background-color: #1e81b0;
+            cursor: pointer;
+            font-family: inherit;
+            font-size: 16px;
+            color: #fff;
+        }
+
+        .btn:hover {
+            background-color: #1e81b0;
+        }
+
+        a {
+            display: inline-block;
+            margin-top: 10px;
+        }
+
+    </style>
 </head>
 <body>
-
-<div class="login-container">
-    <h2>Login to Your Account</h2>
-    <form action="login" method="post">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="login-button">Login</button>
-        </div>
-        <div class="links">
-            <a href="register.jsp">Don't have an account? Register Now!</a>
-            <br>
-            <a href="forgot-password.jsp">Forgot Password?</a>
-        </div>
+    <form class="form" action="" method="post">
+        <input class="input" type="text" name="username" required placeholder="Username">
+        <input class="input" type="passwordt" name="password" required placeholder="Password">
+        <input class="input" type="password" placeholder="Password">
+        <button class="btn" type="submit">Login</button>
+        <a href="register.jsp">Don't have an account? Register Now!</a><br>
+        <a href="forgot-password.jsp">Forgot Password?</a>
     </form>
 </div>
 
